--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3"
   }
 }
